# eufy-clean-ha

./: .gitignore  DEVELOPMENT.md  Eufy Clean Steuerung_ Lokal vs. Cloud.md  Home Assistant Custom Integration Entwicklung(1).md  KNOWN_ISSUES.md  README.de.md  README.md  TROUBLESHOOTING.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt  test_integration.py
.devcontainer/: devcontainer.json
config/: configuration.yaml
custom_components/eufy_clean/: __init__.py  config_flow.py  const.py  coordinator.py  eufy_api.py  manifest.json  strings.json  tuya_api.py  tuya_crypto.py  vacuum.py
custom_components/eufy_clean/translations/: de.json
scripts/: check_eufy_account.py  debug_eufy_api.py  get_eufy_keys.py  setup
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_vacuum.py
